# gear-mcp-server

./: .gitignore  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENT_SPECS.md  LICENSE  README-de.md  README-ja.md  README-ko.md  README-pt_BR.md  README-zh.md  README.en.md  README.md  ROADMAP.md  SPEC.md  index.html  install-addon.ps1  install-addon.sh  install.sh  package-lock.json  package.json  server.json  tasks.md  test-bridge.mjs  test-dynamic-groups.mjs  test-e2e-dynamic-groups.mjs  test-metadata-consistency.mjs  test-packaging-consistency.mjs  test-regressions.mjs  test-setup-hooks.mjs  tsconfig.json
.sisyphus/plans/: onboarding-update.md  terminal-hooks-plan.md
contrib/agent-skill/: README.md  SKILL.md
docs/: Gear-Architecture-Redesign.md  Gear-CPP-Full-Design.md  Gear-CPP-Integration-Analysis.md  Gear-Development-Plan.md  README.md  architecture.md  platform-roadmap.md  release-process.md  unity-mcp-benchmark-plan.md
project/: default_bus_layout.tres  icon.svg.import  project.godot
project/addons/gear_mcp/: gear_mcp.gdextension  gear_mcp.gdextension.uid  panel.gd  panel.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid  screenshot_helper.gd  screenshot_helper.gd.uid
proxy/: README.md  index.js  package.json
scripts/: build-visualizer.js  build.js  bump-version.mjs  postinstall.mjs  smoke-test.mjs
src/: cli.ts  dap_client.ts  gdscript_parser.ts  gdscript_utils.ts  gear_main_thread_node.cpp  gear_main_thread_node.h  godot-bridge.ts  index.ts  lsp_client.ts  project_utils.ts  prompts.ts  register_types.cpp  register_types.h  resources.ts  server-types.ts  server-version.ts  tool-definitions.ts  tool-groups.ts  tools.ts  visualizer-server.ts
src/addon/auto_reload/: auto_reload.gd  plugin.cfg
src/addon/godot_mcp_editor/: mcp_client.gd  plugin.cfg  plugin.gd  tool_executor.gd
src/addon/godot_mcp_editor/tools/: animation_tools.gd  resource_tools.gd  scene_tools.gd
src/addon/godot_mcp_runtime/: godot_mcp_runtime.gd  mcp_runtime_autoload.gd  plugin.cfg
src/cli/: check.ts  doctor.ts  notify.ts  profile.ts  setup.ts  star.ts  uninstall.ts  utils.ts
src/godot_api/: editor_context.cpp  editor_context.h  godot_api.cpp  godot_api.h
src/providers/: ambientcg.ts  index.ts  kenney.ts  logging.ts  manager.ts  polyhaven.ts  types.ts
src/scripts/: godot_operations.gd
src/server/: cache.ts  gear_mcp_api.cpp  gear_mcp_api.h  lifecycle.ts  main_thread_queue.cpp  main_thread_queue.h  mcp_methods.cpp  mcp_methods.h  mcp_server.cpp  mcp_server.h  param-mapper.ts  phase4_resources.cpp  phase4_resources.h  resilience.ts  semantic-search.ts  structured-logger.ts  tcp_server.cpp  tcp_server.h  tool-handlers.ts  tool_registry.cpp  tool_registry.h
src/shared/: config_parser.cpp  config_parser.h  json_rpc_client.cpp  json_rpc_client.h  logger.h  path_utils.cpp  path_utils.h  type_codec.cpp  type_codec.h
src/tools/: register_all.cpp  register_all.h
src/tools/animation/: animation_tools.cpp
src/tools/assets/: assets_tools.cpp
src/tools/audio/: audio_tools.cpp
src/tools/autoload/: autoload_tools.cpp
src/tools/classdb/: classdb_tools.cpp
src/tools/debug/: debug_tools.cpp
src/tools/dx/: dx_tools.cpp
src/tools/editor/: editor_tools.cpp
src/tools/export/: export_tools.cpp
src/tools/file/: file_tools.cpp
src/tools/import/: import_tools.cpp
src/tools/input/: input_tools.cpp
src/tools/intent/: intent_tools.cpp
src/tools/meta/: meta_tools.cpp
src/tools/navigation/: navigation_tools.cpp
src/tools/plugin/: plugin_tools.cpp
src/tools/project/: project_tools.cpp
src/tools/resource/: resource_tools.cpp
src/tools/runtime/: runtime_tools.cpp
src/tools/scene/: scene_tools.cpp  scene_tools_phase2.cpp
src/tools/script/: script_tools.cpp
src/tools/signal/: signal_tools.cpp
src/tools/testing/: testing_tools.cpp
src/tools/theme/: theme_tools.cpp
src/tools/tilemap/: tilemap_tools.cpp
src/tools/uid/: uid_tools.cpp
src/visualizer/: canvas.js  events.js  layout.js  main.js  modals.js  panel.js  state.js  syntax.js  template.html  usages.js  visualizer.css  websocket.js
tests/: e2e_live_editor.js  e2e_phase4.js  e2e_phase5_panel.js  e2e_test.js
